<resources>
    <string name="app_name">PlayListMaker</string>
    <string name="title" translatable="false">PlayListMaker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="course_url" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="my_Email" translatable="false">jim.mazi2016@yandex.ru</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_uri" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="connection_error">Проблемы со связью</string>
    <string name="load_fail">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="pl_country">Страна</string>
    <string name="pl_genge">Жанр</string>
    <string name="pl_year">Год</string>
    <string name="pl_album">Альбом</string>
    <string name="pl_duration">Длительность</string>
    <string name="play_clicked_toast">Кнопка Play нажата</string>
    <string name="like_clicked_toast">%1$s добавлена в favorite</string>
    <string name="add_clicked_toast">%1$s Добавлен в Плейлист</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="mediateka_empty">Ваша медиатека пуста</string>
    <string name="mediateka">Медиатека</string>
    <string name="SelectedTracks">Избранные треки</string>
    <string name="Playlists">Плейлисты</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="playlist_created">Плейлист создан</string>
    <string name="cancel_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lostall_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Завершить</string>
    <string name="AcceptDeletePlaylist">Хотите удалить плейлист</string>
    <string name="No">Нет</string>
    <string name="Yes">Да</string>
    <string name="NoTracksToShare">В этом плейлисте нет треков, которыми можно поделиться</string>
    <string name="AcceptDeleteTrack">Хотите удалить трек</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playListTitle">Название</string>
    <string name="playListDescription">Описание</string>
    <string name="create">Создать</string>
    <string name="no_tracks_in_playlist">В плейлист еще не добавлен ни один трек</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playList">Удалить плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_share">Поделиться</string>

</resources>