<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.practicum.playlistmaker.presentation.ui.search.SearchActivity"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="?attr/colorSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/searchBackButton"
            style="@style/SearchButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:icon="@drawable/arrow_left"
            android:paddingLeft="@dimen/basic_16dp"
            android:paddingTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            style="@style/TitleText"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/basic_16dp">
        <EditText
            android:id="@+id/searchEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:inputType="text"
            android:background="@drawable/backg"
            android:drawableStart="@drawable/search"
            android:drawablePadding="12dp"
            android:paddingLeft="10dp"/>
        <ImageView
            android:id="@+id/searchClearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear_icon"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="12dp"
            android:visibility="gone"/>

    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_item"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:indeterminateTint="@color/yp_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/Not_found_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NotFoundImg"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/nothing_found"
            style="@style/ErrorTextStyle"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/Not_connected_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NotConnectedImg"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/connection_error"
            style="@style/ErrorTextStyle"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/load_fail"
            style="@style/ErrorTextStyle"/>
        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update"
            android:layout_marginTop="20dp"
            style="@style/UpdateButtonStyle"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/search_history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:text="@string/searched"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            android:layout_weight="1"
            tools:listitem="@layout/track_item" />

        <Button
            android:id="@+id/history_clear_button"
            style="@style/UpdateButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/clear_history"
            app:cornerRadius="54dp" />
    </LinearLayout>

</LinearLayout>