<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BackgroundStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.activity.AudioPlayerActivity"
        tools:ignore="ContentDescription">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <Button
            android:id="@+id/button_back_player"
            style="@style/BackButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:iconSize="20dp"
            android:gravity="center"
            app:icon="@drawable/arrow_left"
            app:layout_constraintBottom_toTopOf="@id/player_cover"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/player_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/button_back_player"
            tools:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/track_name"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/artist_name"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/player_cover"
            tools:text="Текст" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/AudioPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@id/button_play"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="текст" />

        <ImageView
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayButton"
            app:layout_constraintBottom_toTopOf="@id/player_time"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <ImageView
            android:id="@+id/button_add_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnPrimary"
            android:src="@drawable/library_add"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@id/button_play" />


        <ImageView
            android:id="@+id/button_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnPrimary"
            android:src="@drawable/like"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <TextView
            android:id="@+id/player_time"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@id/track_time"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/button_play"
            tools:text="10:10" />

        <TextView
            android:id="@+id/track_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/pl_duration"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/track_name_static"
            app:layout_constraintEnd_toStartOf="@id/barrier"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/player_time"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/track_length"
            style="@style/AudioPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/track_time"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="10:10" />

        <TextView
            android:id="@+id/track_name_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/pl_album"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/track_year_static"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/track_time" />

        <TextView
            android:id="@+id/album_name"
            style="@style/AudioPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="8dp"
            android:singleLine="true"
            app:layout_constraintBaseline_toBaselineOf="@id/track_name_static"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/barrier"
            tools:text="Альбом" />

        <TextView
            android:id="@+id/track_year_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/pl_year"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/track_genre_static"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/track_name_static" />

        <TextView
            android:id="@+id/track_year"
            style="@style/AudioPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/track_year_static"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/barrier"
            tools:text="2024" />

        <TextView
            android:id="@+id/track_genre_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/pl_genge"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/track_country_static"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/track_year_static" />

        <TextView
            android:id="@+id/track_genre"
            style="@style/AudioPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/track_genre_static"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/barrier"
            tools:text="Рок" />

        <TextView
            android:id="@+id/track_country_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:text="@string/pl_country"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/track_genre_static" />

        <TextView
            android:id="@+id/track_country"
            style="@style/AudioPlayerText"
            app:layout_constraintBaseline_toBaselineOf="@id/track_country_static"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/barrier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:padding="8dp"
            android:singleLine="true"
            tools:text="Россия" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="track_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottom_sheet_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_audio_player"
        style="@style/BottomSheetBG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/bottom_sheet_line"
            style="@style/BottomSheetStroke"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bottom_sheet_stroke" />

        <TextView
            style="@style/BottomSheetErrorText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/add_to_playlist" />

        <Button
            android:id="@+id/bottom_sheet_add_playlist_btn"
            style="@style/BottomSheetButton"
            android:text="@string/new_playlist"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="24dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>